# evalforge

./: .gitignore  ARCHITECTURE.md  README.md  SPEC.md  pyproject.toml
evalforge/: __init__.py  config.py
evalforge-output/: report-20260706-223414.json  report-20260706-223429.json  report-20260706-223432.json  report-20260706-223504.json
evalforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
evalforge/cli/: __init__.py  init.py  main.py
evalforge/gate/: checker.py
evalforge/judge/: client.py  prompts.py
evalforge/models/: __init__.py  llm.py  result.py  suite.py
evalforge/reporting/: __init__.py  base.py  console_reporter.py  diff_reporter.py  json_reporter.py
evalforge/runner/: executor.py  retry.py
evalforge/scoring/: base.py  exact.py  registry.py  rubric.py
evalforge/tracking/: __init__.py  base.py  cost.py  latency.py
metrics/: builder-scenario-US-1.json  builder-scenario-US-2.json  builder-scenario-US-5.json
spikes/judge-json-validity/: README.md  spike_judge.py
tests/: test_cli.py  test_config.py  test_gate.py  test_judge.py  test_runner.py  test_scoring.py  test_tracking.py
